lined up all the boxes and fixed the wrapping, took off red borders

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
 * {
   box-sizing: border-box;
-  border: solid 2px red;
-  margin: 10px;
-  padding: 5px;
+  /*border: solid 2px red;*/
+  /*margin: 10px;*/
+  /*padding: 5px;*/
 }
 
 /*header{
   width: 100%;
 }*/
-
+body{
+  width: 60%;
+  /*text-align: center;*/
+}
 header{
     background-color: black;
 }
@@ -43,18 +46,24 @@ header{
 }
 
 #content-grid{
+  width: 900px;
+  padding: 5px 100px;
   display:flex;
-  justify-content: left;
+  /*justify-content: center;*/
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .image-card  .edit-delete{
-  width: 33%;
+  /*width: 33%;*/
   background-color: lightyellow;
+  text-align: center;
+  /*float: left;*/
 }
 
-.image-card .picture img{
 
+.image-card .picture img{
+  padding: 3px 10px;
 }
 
 footer{
